--- a/index.html
+++ b/index.html
@@ -1,45 +1,93 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <!-- displays site properly based on user's device -->
 
-  <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  
-  <title>Frontend Mentor | Four card feature section</title>
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="32x32"
+      href="./images/favicon-32x32.png"
+    />
 
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style>
-</head>
-<body>
-  
-  Reliable, efficient delivery
-  Powered by Technology
+    <title>Frontend Mentor | Four card feature section</title>
 
-  Our Artificial Intelligence powered tools use millions of project data points 
-  to ensure that your project is successful
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
+      rel="stylesheet"
+    />
 
-  Supervisor
-  Monitors activity to identify project roadblocks
+    <link rel="stylesheet" href="./index.css" />
+  </head>
+  <body>
+    <section class="headings-contrainer">
+      <h1 class="poppins-extralight headings-contrainer--headline">
+        Reliable, efficient delivery
+      </h1>
 
-  Team Builder
-  Scans our talent network to create the optimal team for your project
+      <h3 class="poppins-semibold headings-contrainer--text">
+        Powered by Technology
+      </h3>
+      <p
+        class="poppins-regular headings-contrainer--desc"
+        style="font-size: 1rem"
+      >
+        Our Artificial Intelligence powered tools use millions of project data
+        points to ensure that your project is successful
+      </p>
+    </section>
 
-  Karma
-  Regularly evaluates our talent to ensure quality
+    <div class="cards-section">
+      <section class="card-container cyan-border margined-right" >
+        <h1 class="poppins-semibold card-headings">Supervisor</h1>
+        <p class=".poppins-regular">
+          Monitors activity to identify project roadblocks
+        </p>
+        <div class="icon-container">
+          <img src="./images/search.svg" alt="Search SVG" class="icon" />
+        </div>
+      </section>
 
-  Calculator
-  Uses data from past projects to provide better delivery estimates
+      <section class="two-section-card-container">
+        <section class="card-container red-border" style="margin-bottom: 2rem">
+          <h1 class="poppins-semibold card-headings">Team Builder</h1>
+          <p class=".poppins-regular">
+            Scans our talent network to create the optimal team for your project
+          </p>
 
-  
-  <footer>
-    <p class="attribution">
-      Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-      Coded by <a href="#">Your Name Here</a>.
-    </p>
-  </footer>
-</body>
+          <div class="icon-container">
+            <img
+              src="./images/icon-team-builder.svg"
+              alt="Team Builder SVG"
+              class="icon"
+            />
+          </div>
+        </section>
+
+        <section class="card-container orange-border">
+          <h1 class="poppins-semibold card-headings">Karma</h1>
+          <p class=".poppins-regular">
+            Regularly evaluates our talent to ensure quality
+          </p>
+          <div class="icon-container">
+            <img src="./images/idea.svg" alt="Idea SVG" class="icon" />
+          </div>
+        </section>
+      </section>
+
+      <section class="card-container blue-border margined-right">
+        <h1 class="poppins-semibold card-headings">Calculator</h1>
+        <p class=".poppins-regular">
+          Uses data from past projects to provide better delivery estimates
+        </p>
+        <div class="icon-container">
+          <img src="./images/software.svg" alt="Software SVG" class="icon" />
+        </div>
+      </section>
+    </div>
+  </body>
 </html>
