fix the accessibility and css

--- a/index.html
+++ b/index.html
@@ -24,70 +24,76 @@
     <link rel="stylesheet" href="./index.css" />
   </head>
   <body>
-    <section class="headings-contrainer">
-      <h1 class="poppins-extralight headings-contrainer--headline">
-        Reliable, efficient delivery
-      </h1>
+    <main>
+      <section class="headings-contrainer">
+        <h1 class="poppins-extralight headings-contrainer--headline">
+          Reliable, efficient delivery
+        </h1>
 
-      <h3 class="poppins-semibold headings-contrainer--text">
-        Powered by Technology
-      </h3>
-      <p
-        class="poppins-regular headings-contrainer--desc"
-        style="font-size: 1rem"
-      >
-        Our Artificial Intelligence powered tools use millions of project data
-        points to ensure that your project is successful
-      </p>
-    </section>
-
-    <div class="cards-section">
-      <section class="card-container cyan-border margined-right" >
-        <h1 class="poppins-semibold card-headings">Supervisor</h1>
-        <p class=".poppins-regular">
-          Monitors activity to identify project roadblocks
+        <h2 class="poppins-semibold headings-contrainer--text">
+          Powered by Technology
+        </h2>
+        <p
+          class="poppins-regular headings-contrainer--desc"
+          style="font-size: 1rems;max-width: 60%;"
+        >
+          Our Artificial Intelligence powered tools use millions of project data
+          points to ensure that your project is successful
         </p>
-        <div class="icon-container">
-          <img src="./images/search.svg" alt="Search SVG" class="icon" />
-        </div>
       </section>
 
-      <section class="two-section-card-container">
-        <section class="card-container red-border" style="margin-bottom: 2rem">
-          <h1 class="poppins-semibold card-headings">Team Builder</h1>
-          <p class=".poppins-regular">
-            Scans our talent network to create the optimal team for your project
+      <div class="cards-section" role="contentinfo">
+        <section class="card-container cyan-border margined-right">
+          <h1 class="poppins-semibold card-headings">Supervisor</h1>
+          <p class=".poppins-regular headings-contrainer--desc">
+            Monitors activity to identify project roadblocks
           </p>
-
-          <div class="icon-container">
-            <img
-              src="./images/icon-team-builder.svg"
-              alt="Team Builder SVG"
-              class="icon"
-            />
-          </div>
+          <figure class="icon-container">
+            <img src="./images/search.svg" alt="Search SVG" class="icon" />
+          </figure>
         </section>
 
-        <section class="card-container orange-border">
-          <h1 class="poppins-semibold card-headings">Karma</h1>
-          <p class=".poppins-regular">
-            Regularly evaluates our talent to ensure quality
-          </p>
-          <div class="icon-container">
-            <img src="./images/idea.svg" alt="Idea SVG" class="icon" />
-          </div>
-        </section>
-      </section>
+        <section class="two-section-card-container">
+          <section
+            class="card-container red-border"
+            style="margin-bottom: 2rem"
+          >
+            <h1 class="poppins-semibold card-headings">Team Builder</h1>
+            <p class=".poppins-regular headings-contrainer--desc">
+              Scans our talent network to create the optimal team for your
+              project
+            </p>
 
-      <section class="card-container blue-border margined-right">
-        <h1 class="poppins-semibold card-headings">Calculator</h1>
-        <p class=".poppins-regular">
-          Uses data from past projects to provide better delivery estimates
-        </p>
-        <div class="icon-container">
-          <img src="./images/software.svg" alt="Software SVG" class="icon" />
-        </div>
-      </section>
-    </div>
+            <div class="icon-container">
+              <img
+                src="./images/icon-team-builder.svg"
+                alt="Team Builder SVG"
+                class="icon"
+              />
+            </div>
+          </section>
+
+          <section class="card-container orange-border">
+            <h1 class="poppins-semibold card-headings">Karma</h1>
+            <p class=".poppins-regular headings-contrainer--desc">
+              Regularly evaluates our talent to ensure quality
+            </p>
+            <figure class="icon-container">
+              <img src="./images/idea.svg" alt="Idea SVG" class="icon" />
+            </figure>
+          </section>
+        </section>
+
+        <section class="card-container blue-border margined-right">
+          <h1 class="poppins-semibold card-headings">Calculator</h1>
+          <p class=".poppins-regular headings-contrainer--desc">
+            Uses data from past projects to provide better delivery estimates
+          </p>
+          <figure class="icon-container">
+            <img src="./images/software.svg" alt="Software SVG" class="icon" />
+          </figure>
+        </section>
+      </div>
+    </main>
   </body>
 </html>
