add margin for cards section

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
         </p>
       </section>
 
-      <div class="cards-section" role="contentinfo">
+      <div class="cards-section" role="document">
         <section class="card-container cyan-border margined-right">
           <h1 class="poppins-semibold card-headings">Supervisor</h1>
           <p class=".poppins-regular headings-contrainer--desc">
